# YoloX-TensorRT-webcam

./: CMakeLists.txt  README.md  yolox.cpp
